@@ -1,5 +1,9 @@
 2003-08-25  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
+	* tools/genStubs.tcl (genStubs::makeDecl): A more subtle way of
+	generating stubbed declarations allows us to have declarations of
+	a function in multiple interfaces simultaneously.
+
 	* generic/tcl.decls: Duplicated some namespace declarations from
 	tclInt.decls here, as mandated by TIP #139.  This is OK since the
 	declarations match and will end up using the declarations in the
